fixing layout bug in mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -123,7 +123,6 @@ body {
   .sponsor-box {
     display: inline-block;
     margin: 20px 0;
-    padding: 0 100px;
   }
 }
 
